Create result entity, controller and repository
