# src/Controller/ApiResultsController.php
@@ -1,0 +1,39 @@
+<?php
+
+
+namespace App\Controller;
+
+use App\Entity\Message;
+use App\Entity\Result;
+use Doctrine\ORM\EntityManagerInterface;
+use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
+use Symfony\Component\HttpFoundation\Request;
+use Symfony\Component\HttpFoundation\Response;
+use Sensio\Bundle\FrameworkExtraBundle\Configuration\Security;
+use Symfony\Component\HttpFoundation\JsonResponse;
+use Symfony\Component\HttpKernel\Exception\HttpException;
+use Symfony\Component\Routing\Annotation\Route;
+
+/**
+ * Class ApiResultController
+ *
+ * @package App\Controller
+ *
+ * @Route(
+ *     path=ApiResultController::RUTA_API,
+ *     name="api_result_"
+ * )
+ */
+class ApiResultsController extends AbstractController
+{
+    public const RUTA_API = '/api/v1/results';
+
+    /** @var EntityManagerInterface $entityManager */
+    private $entityManager;
+
+    public function __construct(EntityManagerInterface $em)
+    {
+        $this->entityManager = $em;
+    }
+
+}
