# src/Entity/Result.php
@@ -1,0 +1,147 @@
+<?php
+
+namespace App\Entity;
+
+use Doctrine\ORM\Mapping as ORM;
+use Hateoas\Configuration\Annotation as Hateoas;
+use JMS\Serializer\Annotation as JMS;
+
+/**
+ * @ORM\Entity(repositoryClass="App\Repository\ResultRepository")
+ * @JMS\XmlNamespace(uri="http://www.w3.org/2005/Atom", prefix="atom")
+ * @JMS\AccessorOrder(
+ *     "custom",
+ *     custom={ "id", "result", "user", "time", "_links" }
+ *     )
+ *
+ * @Hateoas\Relation(
+ *     name="self",
+ *     href="expr(constant('\\App\\Controller\\ApiResultsController::RUTA_API') ~ '/' ~ object.getId())"
+ * )
+ *
+ * @JMS\XmlRoot("result")
+ * @ORM\Table(
+ *     name    = "results",
+ *     indexes = {
+ *          @ORM\Index(name="FK_USER_ID_idx", columns={ "user_id" })
+ *     }
+ * )
+ */
+class Result
+{
+    /**
+     * Result id
+     *
+     * @var integer
+     *
+     * @ORM\Column(
+     *     name     = "id",
+     *     type     = "integer",
+     *     nullable = false
+     * )
+     * @ORM\Id
+     * @ORM\GeneratedValue(strategy="IDENTITY")
+     * @SuppressWarnings(PHPMD.ShortVariable)
+     * @JMS\XmlAttribute
+     */
+    private $id;
+
+    /**
+     * Result value
+     *
+     * @var integer
+     *
+     * @ORM\Column(
+     *     name     = "result",
+     *     type     = "integer",
+     *     nullable = false
+     *     )
+     */
+    private $result;
+
+    /**
+     * Result user
+     *
+     * @var User
+     *
+     * @ORM\ManyToOne(targetEntity="User")
+     * @ORM\JoinColumns({
+     *     @ORM\JoinColumn(
+     *          name                 = "user_id",
+     *          referencedColumnName = "id",
+     *          onDelete             = "cascade"
+     *     )
+     * })
+     */
+    private $user;
+
+    /**
+     * Result time
+     *
+     * @var \DateTime
+     *
+     * @ORM\Column(
+     *     name     = "time",
+     *     type     = "datetime",
+     *     nullable = false
+     *     )
+     */
+    private $time;
+
+    /**
+     * Result constructor.
+     *
+     * @param int       $result result
+     * @param User      $user   user
+     * @param \DateTime $time   time
+     */
+    public function __construct(
+        int $result = 0,
+        User $user = null,
+        \DateTime $time = null
+    ) {
+        $this->id     = 0;
+        $this->result = $result;
+        $this->user   = $user;
+        $this->time   = $time;
+    }
+
+    public function getId(): ?int
+    {
+        return $this->id;
+    }
+
+    public function getResult(): ?int
+    {
+        return $this->result;
+    }
+
+    public function setResult(int $result): self
+    {
+        $this->result = $result;
+        return $this;
+    }
+
+    public function getUser(): User
+    {
+        return $this->user;
+    }
+
+    public function setUser(User $user): self
+    {
+        $this->user = $user;
+        return $this;
+    }
+
+    public function getTime(): ?\DateTime
+    {
+        return $this->time;
+    }
+
+    public function setTime(\DateTime $time): self
+    {
+        $this->time = $time;
+        return $this;
+    }
+
+}
